@@ -16,6 +16,7 @@
 	  - New category menu option: "Unidentified items"
 	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
 	  - BUC items inside containers dropped on altars (from AceHack)
+	  - stairs leading to branches are colored yellow
 
 	* new dungeon features:
 	  - dead trees (from NetHack Brass)
